<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tag_line"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_round_rect_stroke"
                android:padding="20dp"
                android:text="@string/buy"
                android:textColor="@color/colorAccent" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_round_rect_stroke"
                android:padding="20dp"
                android:text="@string/rent"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_round_rect_stroke"
                android:padding="20dp"
                android:text="@string/new_projects"
                android:textColor="@color/colorAccent" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_round_rect_stroke"
                android:foreground="@drawable/ic_new"
                android:foregroundGravity="right|top">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="20dp"
                    android:text="@string/post_property"
                    android:textColor="@color/colorAccent" />
            </FrameLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/my_activity"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:buttonTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/recent_search"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:buttonTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/last_seen"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:buttonTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/shortlisted"
                android:textColor="@color/colorAccent" />
        </RadioGroup>

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:layout_collapseMode="parallax"
            app:titleTextColor="@color/colorAccent" />
    </android.support.design.widget.AppBarLayout>

</FrameLayout>